--- a/pc.html
+++ b/pc.html
@@ -329,7 +329,7 @@
           i {
             margin-bottom: 2%;
             border-radius: 0.4rem;
-            font-size: 9vw !important;
+            font-size: calc(2vw + 8rem) !important;
           }
           hr {
             background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, white 35%, rgba(255, 255, 255, 0.1) 100%);
