--- a/pc.html
+++ b/pc.html
@@ -219,8 +219,20 @@
         <h1 class="Contenth1">React.js</h1>
         <p>React — JavaScript-библиотека с открытым исходным кодом для разработки пользовательских интерфейсов. React разрабатывается и поддерживается Facebook, Instagram и сообществом отдельных разработчиков и корпораций. React может использоваться для разработки одностраничных и мобильных приложений.</p>
       </div>
-
       <div class="innerh1">
+        <hr />
+        <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой GitHub</h1>
+        <hr />
+      </div>
+      <div class="github-card" data-github="kotru21" data-width="400" data-height="200" data-theme="medium"></div>
+      <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+      <div class="innerh1">
+        <div class="github-card" data-github="kotru21/counts" data-width="400" data-height="200" data-theme="medium"></div>
+        <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+        <div class="innerh1">
+          <div class="github-card" data-github="kotru21/kotikov" data-width="400" data-height="200" data-theme="medium"></div>
+          <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+          <div class="innerh1">
         <hr />
         <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
         <div style="box-shadow: none; background-image: url(./src/index/cookie.webp); background-size: 10%; padding-bottom: 4rem">
