--- a/pc.html
+++ b/pc.html
@@ -227,7 +227,7 @@
       <div class="github-card" data-github="kotru21" data-width="400" data-height="200" data-theme="medium"></div>
       <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
       <div class="innerh1">
-        <div class="github-card" data-github="kotru21/counts" data-width="400" data-height="200" data-theme="medium"></div>
+        <div class="github-card" data-github="kotru21/count" data-width="400" data-height="200" data-theme="medium"></div>
         <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
         <div class="innerh1">
           <div class="github-card" data-github="kotru21/kotikov" data-width="400" data-height="200" data-theme="medium"></div>
