--- a/pc.html
+++ b/pc.html
@@ -45,7 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
     <title>Добро пожаловать</title>
   </head>
   <body>
@@ -224,14 +223,17 @@
         <hr />
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой GitHub</h1>
         <hr />
+        <div class="github-dsc">
+          <div class="github-profile-badge" data-user="kotru21"></div>
+          <script src="https://cdn.jsdelivr.net/gh/Rapsssito/github-profile-badge@latest/src/widget.min.js"></script>
+          <img src="https://activity-graph.herokuapp.com/graph?username=kotru21&theme=react-dark&hide_border=true&area=true" style="width: 100%" />
+          <div style="display: flex; justify-content: center; margin-top: 1rem">
+            <img src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&theme=dark&hide_border=true&area=true" style="margin-right: 2rem" class="gh-img" />
+            <img src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&theme=dark&hide_border=true&area=true" alt="github stats" class="gh-img" />
+          </div>
+        </div>
       </div>
-      <div class="github-card" data-github="kotru21" data-width="400" data-height="200" data-theme="medium"></div>
-      <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
       <div class="innerh1">
-        <div class="github-card" data-github="kotru21/count" data-width="400" data-height="200" data-theme="medium"></div>
-        <div class="innerh1">
-          <div class="github-card" data-github="kotru21/kotikov" data-width="400" data-height="200" data-theme="medium"></div>
-          <div class="innerh1">
         <hr />
         <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
         <div style="box-shadow: none; background-image: url(./src/index/cookie.webp); background-size: 10%; padding-bottom: 4rem">
@@ -330,6 +332,24 @@
         </footer>
 
         <style>
+          .github-dsc {
+            transition: 1s;
+            outline: 1px solid transparent;
+          }
+          .github-profile-badge-img {
+            width: 8vw;
+            height: 8vw;
+          }
+          .github-profile-badge-logo {
+            width: 2vw;
+            height: 2vw;
+          }
+          .github-profile-badge-name {
+            font-size: 2vw;
+          }
+          .gh-img {
+            width: 100%;
+          }
           p {
             opacity: 0.8;
             font-size: calc(0.6rem + 0.5vw);
@@ -364,6 +384,10 @@
             font-smooth: always;
           }
           .card:hover {
+            transform: scale(1.04);
+            filter: drop-shadow(20px 20px 20px rgb(0, 0, 0));
+          }
+          .github-dsc:hover {
             transform: scale(1.04);
             filter: drop-shadow(20px 20px 20px rgb(0, 0, 0));
           }
@@ -478,7 +502,7 @@
             height: 110vh;
             min-height: 110vh;
             max-width: 110vh;
-            transition: 2s;
+            transition: 1s;
           }
           .img.scrolled {
             transform: translateX(5vw);
