a bit more shadows

--- a/pc.html
+++ b/pc.html
@@ -53,7 +53,6 @@
         <span class="animatedtext-content">
           <a class="bx bxl-youtube btn" href="https://www.youtube.com/channel/UCOYprFCDyhHdhbtfzZNqYFQ"> </a>
           <a class="bx bxl-vk btn" href="https://vk.com/arsenij_kotikov"> </a>
-          <a class="bx bxl-github btn" href="https://github.com/kotru21"> </a>
           <a class="bx bxl-twitter btn" href="https://twitter.com/arsenij_kotikov"> </a>
         </span>
       </div>
@@ -69,7 +68,6 @@
             <span class="animatedtext-content">
               <a class="bx bxl-youtube btn bigger" href="https://www.youtube.com/channel/UCOYprFCDyhHdhbtfzZNqYFQ"> </a>
               <a class="bx bxl-vk btn bigger" href="https://vk.com/arsenij_kotikov"> </a>
-              <a class="bx bxl-github btn bigger" href="https://github.com/kotru21"> </a>
               <a class="bx bxl-twitter btn bigger" href="https://twitter.com/arsenij_kotikov"> </a>
             </span>
           </div>
@@ -227,7 +225,7 @@
           <div class="github-profile-badge" data-user="kotru21"></div>
           <script src="https://cdn.jsdelivr.net/gh/Rapsssito/github-profile-badge@latest/src/widget.min.js"></script>
           <img src="https://activity-graph.herokuapp.com/graph?username=kotru21&theme=react-dark&hide_border=true&area=true" style="width: 100%" />
-          <div style="display: flex; justify-content: center; margin-top: 1rem">
+          <div style="display: flex; justify-content: center; margin-top: 1rem; width: 100%">
             <img src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&theme=dark&hide_border=true&area=true" style="margin-right: 2rem" class="gh-img" />
             <img src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&theme=dark&hide_border=true&area=true" alt="github stats" class="gh-img" />
           </div>
@@ -349,6 +347,10 @@
           }
           .gh-img {
             width: 100%;
+            transition: 2s;
+          }
+          .gh-img:hover {
+            filter: drop-shadow(0 0 5px rgb(54, 54, 255));
           }
           p {
             opacity: 0.8;
