--- a/pc.html
+++ b/pc.html
@@ -330,6 +330,11 @@
         </footer>
 
         <style>
+          * {
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+          }
+
           .github-dsc {
             transition: 1s;
             outline: 1px solid transparent;
