--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.8/jquery.viewportchecker.min.js" integrity="sha512-FRX6MYITclzDyyMmSQLgZoZTfE+GLzAQpjs15adVZMY6AqhsrBLx8UZwp4FoqrrRFWY9TiaPwja7EY5fk309vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="ViewportAnim.js"></script>
-    <link href="./css/mobile.css" rel="stylesheet" />
+    <link href="custom.css" rel="stylesheet" />
     <link rel="preload" href="./src/index/cat.webp" as="image" />
 
     <title>Добро пожаловать</title>
