--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:title" content="Арсений Котиков" key="title" />
     <meta property="og:site_name" content="Арсений Котиков" />
-    <meta name="theme-color" content="#55bbee" />
+    <meta name="theme-color" content="#8f00ff" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta name="description" content="Описание? Ну и что мне сюда написать?..." />
