--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:site_name" content="Арсений Котиков" />
     <meta property="og:site_name" content="Арсений Котиков" />
-    <meta name="theme-color" content="#8f00ff" />
+    <meta name="theme-color" content="#ff0000" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta name="description" content="Описание? Ну и что мне сюда написать?..." />
