--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale="1.0" maximum-scale="1.0" user-scalable="no" />
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:site_name" content="Арсений Котиков" />
+    <meta property="og:title" content="Арсений Котиков" key="title" />
     <meta property="og:site_name" content="Арсений Котиков" />
     <meta name="theme-color" content="#ff0000" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/index/web_preview.png" />
