--- a/pc.html
+++ b/pc.html
@@ -26,9 +26,7 @@
     </script>
     <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale="1.0" maximum-scale="1.0" user-scalable="no" />
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:title" content="Арсений Котиков" key="title" />
     <meta property="og:site_name" content="Арсений Котиков" />
-    <meta name="theme-color" content="#8f00ff" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta name="description" content="Описание? Ну и что мне сюда написать?..." />
@@ -221,26 +219,26 @@
         <h1 class="Contenth1">React.js</h1>
         <p>React — JavaScript-библиотека с открытым исходным кодом для разработки пользовательских интерфейсов. React разрабатывается и поддерживается Facebook, Instagram и сообществом отдельных разработчиков и корпораций. React может использоваться для разработки одностраничных и мобильных приложений.</p>
       </div>
-      <div class="innerh1">
+      <div class="innerh1" style="padding-bottom: 0">
         <hr />
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой GitHub</h1>
         <hr />
         <div class="gh-hover">
           <div class="github-profile-badge" data-user="kotru21"></div>
           <script src="https://cdn.jsdelivr.net/gh/Rapsssito/github-profile-badge@latest/src/widget.min.js"></script>
-          <img src="https://activity-graph.herokuapp.com/graph?username=kotru21&theme=react-dark&hide_border=true&area=true" style="width: 100%" />
+          <img src="https://activity-graph.herokuapp.com/graph?username=kotru21&theme=react-dark&hide_border=true&area=true&bg_color=151515" style="width: 100%" />
         </div>
         <div style="display: flex; justify-content: center; margin-top: 2rem">
           <div class="row">
             <div class="m-auto">
-              <img src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&theme=dark&hide_border=true&area=true" style="margin-right: 2rem" class="gh-img gh-hover" />
-              <img src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&theme=dark&hide_border=true&area=true" alt="github stats" class="gh-img gh-hover" />
+              <img src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&theme=dark&hide_border=true&area=true&title_color=FA8B00" style="margin-right: 2rem" class="gh-img gh-hover" />
+              <img src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&theme=dark&hide_border=true&area=true&" alt="github stats" class="gh-img gh-hover" />
             </div>
           </div>
         </div>
       </div>
 
-      <div class="innerh1">
+      <div class="innerh1" style="padding-bottom: 0">
         <hr />
         <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
         <div style="box-shadow: none; background-image: url(./src/index/cookie.webp); background-size: 10%; padding-bottom: 4rem">
