--- a/pc.html
+++ b/pc.html
@@ -228,16 +228,15 @@
           <script src="https://cdn.jsdelivr.net/gh/Rapsssito/github-profile-badge@latest/src/widget.min.js"></script>
           <img src="https://activity-graph.herokuapp.com/graph?username=kotru21&theme=react-dark&hide_border=true&area=true&bg_color=151515" style="width: 100%" />
         </div>
-        <div style="display: flex; justify-content: center; margin-top: 2rem">
-          <div class="row">
-            <div class="m-auto">
-              <img src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&theme=dark&hide_border=true&area=true&title_color=FA8B00" style="margin-right: 2rem" class="gh-img gh-hover" />
-              <img src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&theme=dark&hide_border=true&area=true&" alt="github stats" class="gh-img gh-hover" />
-            </div>
+        <div class="row" style="padding-top: 1.5rem">
+          <div class="col-lg-6 col-md-6 col-xs-6 thumb">
+            <img class="gh-hover img-responsive" style="width: 100%" src="https://github-readme-stats.vercel.app/api?username=kotru21&stars,commits,prs,issues,contribs&theme=dark&hide_border=true&area=true&title_color=FA8B00" />
+          </div>
+          <div class="col-lg-6 col-md-6 col-xs-6 thumb">
+            <img class="gh-hover img-responsive" style="width: 100%" src="https://github-readme-streak-stats.herokuapp.com/?user=kotru21&theme=dark&hide_border=true&area=true" />
           </div>
         </div>
       </div>
-
       <div class="innerh1" style="padding-bottom: 0">
         <hr />
         <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
