--- a/pc.html
+++ b/pc.html
@@ -146,26 +146,34 @@
       </div>
       <div class="dsc" style="margin-top: -0.5rem">
         <img loading="lazy" src="./src/index/eth.webp" class="dsc-img rounded" alt="..." />
-        <h1 class="Contenth1">Блокчейн</h1>
-        <p>Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</p>
+        <div class="dsc-inner">
+          <h1 class="dsc-h1 Contenth1">Блокчейн</h1>
+          <p class="dsc-text">Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</p>
+        </div>
       </div>
-      <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
+      <hr class="hr-dsc" />
       <div class="dsc">
         <img loading="lazy" src="./src/pc_index/deeplearning.png" class="dsc-img rounded" alt="..." />
-        <h1 class="Contenth1">Нейронные сети</h1>
-        <p>Нейро́нная сеть — математическая модель, а также её программное или аппаратное воплощение, построенная по принципу организации и функционирования биологических нейронных сетей — сетей нервных клеток живого организма.</p>
+        <div class="dsc-inner">
+          <h1 class="dsc-h1 Contenth1">Нейронные сети</h1>
+          <p class="dsc-text">Нейро́нная сеть — математическая модель, а также её программное или аппаратное воплощение, построенная по принципу организации и функционирования биологических нейронных сетей — сетей нервных клеток живого организма.</p>
+        </div>
       </div>
-      <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
+      <hr class="hr-dsc" />
       <div class="dsc">
         <img loading="lazy" src="./src/pc_index/gamepad.png" class="dsc-img rounded" alt="..." />
-        <h1 class="Contenth1">Игры</h1>
-        <p>Кому-то не нравятся компьютерные игры? Серьёзно? Компьютерная игра — компьютерная программа, служащая для организации игрового процесса (геймплея), связи с партнёрами по игре, или сама выступающая в качестве партнёра.</p>
+        <div class="dsc-inner">
+          <h1 class="dsc-h1 Contenth1">Игры</h1>
+          <p class="dsc-text">Кому-то не нравятся компьютерные игры? Серьёзно? Компьютерная игра — компьютерная программа, служащая для организации игрового процесса (геймплея), связи с партнёрами по игре, или сама выступающая в качестве партнёра.</p>
+        </div>
       </div>
-      <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
+      <hr class="hr-dsc" />
       <div class="dsc" style="margin-bottom: 4rem">
         <img loading="lazy" src="./src/pc_index/pc_cat.png" class="dsc-img rounded" alt="..." />
-        <h1 class="Contenth1">Котики</h1>
-        <p>Лол, здесь нужно что-то объяснять? Котики классные.</p>
+        <div class="dsc-inner">
+          <h1 class="dsc-h1 Contenth1">Котики</h1>
+          <p class="dsc-text">Лол, здесь нужно что-то объяснять? Котики классные.</p>
+        </div>
       </div>
 
       <div class="innerh1">
@@ -173,51 +181,69 @@
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой стек</h1>
         <hr />
       </div>
-      <div class="dsc" style="margin-top: -0.5rem">
-        <i class="bx bxs-file-js" style="font-size: 10rem; float: left; background: none"></i>
-        <h1 class="Contenth1">JavaScript</h1>
-        <p>JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
-      </div>
-      <div class="dsc">
-        <i class="bx bxs-file-html" style="font-size: 10rem; float: left; background: none"></i>
-        <h1 class="Contenth1">HTML / CSS</h1>
-        <p>Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт. Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
-      </div>
-      <div class="dsc">
-        <i class="bx bxs-server" style="font-size: 10rem; float: left; background: none; height: 20vh"></i>
-        <h1 class="Contenth1">PHP / Node.js</h1>
-        <p>
-          PHP - C-подобный скриптовый язык общего назначения, интенсивно применяемый для разработки веб-приложений. В настоящее время поддерживается подавляющим большинством хостинг-провайдеров и является одним из лидеров среди языков, применяющихся для создания динамических веб-сайтов. Node или Node.js — программная платформа,
-          превращающая JavaScript из узкоспециализированного языка в язык общего назначения.
-        </p>
+      <div class="dsc-flex-container">
+        <div class="dsc" style="margin-top: -0.5rem">
+          <i class="bx bxs-file-js" style="font-size: 10rem; float: left; background: none"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">JavaScript</h1>
+            <p class="dsc-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
+          </div>
+        </div>
+        <div class="dsc">
+          <i class="bx bxs-file-html" style="font-size: 10rem; float: left; background: none"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">HTML / CSS</h1>
+            <p class="dsc-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт. Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
+          </div>
+        </div>
+        <div class="dsc">
+          <i class="bx bxs-server" style="font-size: 10rem; float: left; background: none; height: 20vh"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">PHP / Node.js</h1>
+            <p class="dsc-text">
+              PHP - C-подобный скриптовый язык общего назначения, интенсивно применяемый для разработки веб-приложений. В настоящее время поддерживается подавляющим большинством хостинг-провайдеров и является одним из лидеров среди языков, применяющихся для создания динамических веб-сайтов. Node или Node.js — программная платформа,
+              превращающая JavaScript из узкоспециализированного языка в язык общего назначения.
+            </p>
+          </div>
+        </div>
       </div>
       <div class="innerh1">
         <hr />
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Что я учу/планирую выучить</h1>
         <hr />
       </div>
-      <div class="dsc" style="margin-top: -0.5rem">
-        <i class="bx bxl-c-plus-plus" style="font-size: 10rem; float: left; background: none"></i>
-        <h1 class="Contenth1">C# / C++</h1>
-        <p>
-          Объекто-ориентированные языки программирования промежуточного уровня.C++ широко используется для разработки программного обеспечения, являясь одним из самых популярных языков программирования. Область его применения включает создание операционных систем, разнообразных прикладных программ, драйверов устройств, приложений для
-          встраиваемых систем, высокопроизводительных серверов, а также игр.
-        </p>
-      </div>
-      <div class="dsc">
-        <i class="bx bxl-postgresql" style="font-size: 10rem; float: left; background: none"></i>
-        <h1 class="Contenth1">SQL</h1>
-        <p>Structured Query Language («язык структурированных запросов») — декларативный язык программирования, применяемый для создания, модификации и управления данными в реляционной базе данных, управляемой соответствующей системой управления базами данных.</p>
-      </div>
-      <div class="dsc">
-        <i class="bx bxl-python" style="font-size: 10rem; float: left; background: none"></i>
-        <h1 class="Contenth1">Python</h1>
-        <p>Python — высокоуровневый язык программирования общего назначения с динамической строгой типизацией и автоматическим управлением памятью, ориентированный на повышение производительности разработчика, читаемости кода и его качества, а также на обеспечение переносимости написанных на нём программ.</p>
-      </div>
-      <div class="dsc">
-        <i class="bx bxl-react" style="font-size: 10rem; float: left; background: none"></i>
-        <h1 class="Contenth1">React.js</h1>
-        <p>React — JavaScript-библиотека с открытым исходным кодом для разработки пользовательских интерфейсов. React разрабатывается и поддерживается Facebook, Instagram и сообществом отдельных разработчиков и корпораций. React может использоваться для разработки одностраничных и мобильных приложений.</p>
+      <div class="dsc-flex-container">
+        <div class="dsc" style="margin-top: -0.5rem">
+          <i class="bx bxl-c-plus-plus" style="font-size: 10rem; float: left; background: none"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">C# / C++</h1>
+            <p class="dsc-text">
+              Объекто-ориентированные языки программирования промежуточного уровня.C++ широко используется для разработки программного обеспечения, являясь одним из самых популярных языков программирования. Область его применения включает создание операционных систем, разнообразных прикладных программ, драйверов устройств, приложений для
+              встраиваемых систем, высокопроизводительных серверов, а также игр.
+            </p>
+          </div>
+        </div>
+        <div class="dsc">
+          <i class="bx bxl-postgresql" style="font-size: 10rem; float: left; background: none"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">SQL</h1>
+            <p class="dsc-text">Structured Query Language («язык структурированных запросов») — декларативный язык программирования, применяемый для создания, модификации и управления данными в реляционной базе данных, управляемой соответствующей системой управления базами данных.</p>
+          </div>
+        </div>
+        <div class="dsc">
+          <i class="bx bxl-python" style="font-size: 10rem; float: left; background: none"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">Python</h1>
+            <p class="dsc-text">Python — высокоуровневый язык программирования общего назначения с динамической строгой типизацией и автоматическим управлением памятью, ориентированный на повышение производительности разработчика, читаемости кода и его качества, а также на обеспечение переносимости написанных на нём программ.</p>
+          </div>
+        </div>
+        <div class="dsc">
+          <i class="bx bxl-react" style="font-size: 10rem; float: left; background: none"></i>
+          <div class="dsc-inner">
+            <h1 class="dsc-h1 Contenth1">React.js</h1>
+            <p class="dsc-text">React — JavaScript-библиотека с открытым исходным кодом для разработки пользовательских интерфейсов. React разрабатывается и поддерживается Facebook, Instagram и сообществом отдельных разработчиков и корпораций. React может использоваться для разработки одностраничных и мобильных приложений.</p>
+          </div>
+        </div>
       </div>
       <div class="innerh1" style="padding-bottom: 0">
         <hr />
