--- a/pc.html
+++ b/pc.html
@@ -265,8 +265,8 @@
       </div>
       <div class="innerh1" style="padding-bottom: 0">
         <hr />
-        <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
-        <div style="box-shadow: none; background-image: url(./src/index/cookie.webp); background-size: 10%; padding-bottom: 4rem">
+        <h1 class="Contenth1 text-center endpage" id="like-a" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
+        <div class="cookiebg" id="like-b">
           <hr style="margin-bottom: 5rem" />
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
